unpackaged/main/default/objects/litify_pm__Resolution_Split__c/litify_pm__Resolution_Split__c.object-meta.xml
<CustomObject>
    <description>Represents a split of a resolution</description>
    <label>Resolution Split</label>
    <nameField>
        <label>Resolution Split Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resolution Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>