unpackaged/main/default/objects/litify_pm__Resolution_Split__c/fields/litify_pm__lit_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Amount__c</fullName>
    <description>Resolution split amount</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>