unpackaged/main/default/objects/litify_pm__Resolution_Split__c/fields/litify_pm__lit_Resolution__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Resolution__c</fullName>
    <description>Master record for a Resolution Split</description>
    <label>Resolution</label>
    <referenceTo>litify_pm__Resolution__c</referenceTo>
    <relationshipLabel>Resolution Splits</relationshipLabel>
    <relationshipName>Resolution_Splits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>