unpackaged/main/default/objects/litify_pm__Resolution_Split__c/fields/litify_pm__lit_Role__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to corresponding role</description>
    <label>Role</label>
    <referenceTo>litify_pm__Role__c</referenceTo>
    <relationshipLabel>Resolution Splits</relationshipLabel>
    <relationshipName>Resolution_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>