unpackaged/main/default/objects/litify_pm__Resolution_Split__c/fields/litify_pm__lit_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Type__c</fullName>
    <description>Describes the type of a Resolution Split</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>